[gd_scene load_steps=2 format=2]

[ext_resource path="res://Login/Login.gd" type="Script" id=1]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -39.5
margin_right = 187.0
margin_bottom = 39.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetworkPanel" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 374.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerButton" type="Button" parent="VBoxContainer/NetworkPanel"]
margin_right = 185.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Server"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/NetworkPanel"]
margin_left = 189.0
margin_right = 374.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/NetworkPanel/VBoxContainer"]
margin_right = 185.0
margin_bottom = 24.0

[node name="IpField" type="LineEdit" parent="VBoxContainer/NetworkPanel/VBoxContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"
align = 1

[node name="PortField" type="LineEdit" parent="VBoxContainer/NetworkPanel/VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 185.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "27"
align = 1

[node name="ClientButton" type="Button" parent="VBoxContainer/NetworkPanel/VBoxContainer"]
margin_top = 28.0
margin_right = 185.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Client"

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 374.0
margin_bottom = 79.0
align = 1
[connection signal="pressed" from="VBoxContainer/NetworkPanel/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NetworkPanel/VBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
